# obsidian-driver

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  prelude.rs
src/ai/: mod.rs  prompt.rs
src/ai/api/: mod.rs  openai.rs
src/ai_api/: mod.rs  openai.rs  prompt.rs
src/config/: openai.rs
src/error/: mod.rs
src/file/: mod.rs
src/file/mdfile/: mod.rs  yaml.rs
src/file/vault/: mod.rs
src/obsidian_file_io/: file.rs  mod.rs
src/obsidian_file_io/file/: mdfile.rs  mod.rs
src/obsidian_file_io/file/mdfile/: mod.rs
