[package]
name = "obsidian-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde_yaml = "0.9.34"
regex = "1.10.6"
futures = "0.3.30"
